[package]
name = "relrewrite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tsconfig = { git = "https://github.com/kurtbuilds/tsconfig" }
serde = "1.0.147"
serde_json = "1.0.87"
clap = { version = "4.0.26", features = ["derive"] }
anyhow = "1.0.66"
walkdir = "2"